# spdnet-datasets

./: .gitignore  LICENSE  README.md  pyproject.toml
src/spdnet_datasets/: __init__.py  base.py  manager.py
src/spdnet_datasets/estimator/: __init__.py  covariance.py
src/spdnet_datasets/real/: __init__.py  chikusei.py  deephsfruit.py  gsoff.py  hdm05.py  hyperleaf.py  kaggle_wheat.py  placenta.py  rices90.py  uav.py
src/spdnet_datasets/synthetic/: __init__.py  config.py  data_generator.py  dataset.py
src/spdnet_datasets/utils/: __init__.py  base_covariance_precompute.py  chikusei_preprocess.py  covariance_precompute.py  gsoff_preprocess.py  kaggle_wheat_covariance_precompute.py  placenta_preprocess.py  uav_preprocess.py
src/spdnet_datasets/utils/placenta_utils/: __init__.py  annotations.py  spectral_tiffs.py
tests/: __init__.py
