[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spdnet-datasets"
version = "0.1.0"
description = "Dataset loaders, covariance estimators, and synthetic data generators for SPDNet research"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Matthieu Gallet"},
    {name = "Ammar Mian", email = "ammar.mian@univ-smb.fr"},
]
keywords = ["deep-learning", "spd-matrices", "datasets", "covariance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "tifffile>=2021.0.0",
    "spectral>=0.22.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-cov>=3.0.0"]
dev = ["ruff>=0.1.0", "pre-commit>=3.4.0"]

[project.urls]
Repository = "https://github.com/Yet-Another-Research-Organisation/spdnet-datasets"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
